*SVN*

* Added an html_options hash parameter to javascript_tag() and update_page_tag() helpers #6311 [tzaharia]. Example:

    update_page_tag :defer => 'true' { |page| ... }

  Gives:

    <script defer="true" type="text/javascript">...</script>
    
  Which is needed for dealing with the IE6 DOM when it's not yet fully loaded.

* Fixed that rescue template path shouldn't be hardcoded, then it's easier to hook in your own #6295 [mnaberez]

* Fixed escaping of backslashes in JavaScriptHelper#escape_javascript #6302 [sven@c3d2.de]

* Fixed that some 500 rescues would cause 500's themselves because the response had not yet been generated #6329 [cmselmer]

* respond_to :html doesn't assume .rhtml.  #6281 [Hampton Catlin]

* Fixed some deprecation warnings in ActionPack [Rick Olson]

* assert_select_rjs decodes escaped unicode chars since the Javascript generators encode them.  #6240 [japgolly]

* Deprecation: @cookies, @headers, @request, @response will be removed after 1.2. Use the corresponding method instead.  [Jeremy Kemper]

* Make the :status parameter expand to the default message for that status code if it is an integer. Also support symbol statuses. [Jamis Buck]. Examples:

    head :status => 404        # expands to "404 Not Found"
    head :status => :not_found # expands to "404 Not Found"
    head :status => :created   # expands to "201 Created"

* Add head(options = {}) for responses that have no body. [Jamis Buck]. Examples:

    head :status => 404 # return an empty response with a 404 status
    head :location => person_path(@person), :status => 201

* Fix bug that kept any before_filter except the first one from being able to halt the before_filter chain.  [Rick Olson]

* strip_links is case-insensitive.  #6285 [tagoh, Bob Silva]

* Clear the cache of possible controllers whenever Routes are reloaded. [Nicholas Seckar]
